# moderncpp

./: .clang-format  .gitignore  builtin_expect.cc  enum_class.cc  move_rvalue.cc  why_not_use_goto.cc
OOP/: observer.cc  rule_of_five.cc  static_bind_interface.cc
algocraft/: josephus.cc
atomic_memory_order/: mem_order_relaxed  mem_order_relaxed.cc  spin_and_mutex.cc  spsc_ringbuf.cc
benchmark/: duration_count  duration_count.cc  duration_count.h
c_style_lowlevel/: build_timestamp.c  builtin_expect.c  count_lines.c  epoll_server.c  my_memcmp.c  oop.c  snprintf_strncpy_memcpy.cc
cmake_mini/: CMakeLists.txt  lock_free_linkedlist.cc  miniexe.cc  oneline_cmd.sh
cmake_mini/src/: simple_if.cc  simple_if.h
cppstdlib/: vector.cc
debug_helps/: build_with_sanitizers.sh  leak_examples.cc
good_style/: why_not_use_goto.cc
include/: README.md
memory_ctrl/: memory_layout.cc  move_pitfalls.cc  move_rvalue.cc  placement_new.cc  rvalue_reference.cc
metaprogramming/: derive_template.cc  func_template_and_lambda.cc  macro_concat.cc  meta_member_checker.cc  meta_member_checker.h  meta_member_checker_2.cc  meta_member_checker_test.cc  mimic_serialization.cc  mock_monad.cc  parameters_pack.cc  partial_spec_incomplete_template_class.cc  partial_spec_with_enum.cc  tag_dispatching.cc  tag_dispatching_enum.cc  template_compile_check.cc  tmpl_function_with_closure.cc  using_template.cc  using_type_traits.cc
mthreading/: cv_wait.cc
some_c_code/: count_lines.c  oop
syscall/: signal_ignore.cc
